# vapour

./: AUTHORS  COPYING  COPYING.BSD  Makefile.am  README  configure.ac
config/: pandora-plugin
m4/: have_mysql.m4  pandora_have_libmemcached.m4  pandora_have_libndbclient.m4  pandora_vc_build.m4
src/: ndb_storage.cc  ndb_storage.h  vapour.c
