# pandora-build 
# Copyright (C) 2009 Monty Taylor
# All rights reserved.
#
# Use and distribution licensed under the BSD license.  See
# the COPYING file in this directory for full text.

ACLOCAL_AMFLAGS= -I m4

aclocaldir= $(datadir)/aclocal
aclocal_DATA= \
	m4/pandora_64bit.m4 \
	m4/pandora_canonical.m4 \
	m4/pandora_check_compiler_version.m4 \
	m4/pandora_check_cxx_standard.m4 \
	m4/pandora_enable_dtrace.m4 \
	m4/pandora_ensure_gcc_version.m4 \
	m4/pandora_extensions.m4 \
	m4/pandora_have_better_malloc.m4 \
	m4/pandora_have_libdrizzle.m4 \
	m4/pandora_have_libgearman.m4 \
	m4/pandora_have_libmemcached.m4 \
	m4/pandora_have_libpq.m4 \
	m4/pandora_have_libsqlite3.m4 \
	m4/pandora_have_protobuf.m4 \
	m4/pandora_header_assert.m4 \
	m4/pandora_libtool.m4 \
	m4/pandora_optimize.m4 \
	m4/pandora_platform.m4 \
	m4/pandora_plugins.m4 \
	m4/pandora_pthread.m4 \
  m4/pandora_python3_devel.m4 \
	m4/pandora_shared_ptr.m4 \
	m4/pandora_swig.m4 \
	m4/pandora_use_pipe.m4 \
	m4/pandora_vc_build.m4 \
	m4/pandora_warnings.m4 \
	m4/pandora_with_lua.m4 \
	m4/pandora_with_memcached.m4 \
	m4/pandora_with_perl.m4 \
	m4/pandora_with_php.m4 \
	m4/pandora_with_python3.m4 \
	m4/pandora_with_python.m4 \
	m4/pandora_with_r.m4 \
	m4/pandora_with_ruby.m4


EXTRA_DIST= ${aclocal_DATA}
