# vapour
# Copyright (C) 2010 Monty Taylor, Stewart Smith
# All rights reserved.
#
# Use and distribution licensed under the BSD license.  See
# the COPYING file in this directory for full text.

ACLOCAL_AMFLAGS= -I m4

bin_PROGRAMS= vapour

vapour_SOURCES= src/vapour.c
vapour_LDADD= ${LTLIBMEMCACHED}
