# pandora-build 
# Copyright (C) 2009 Monty Taylor
# Copyright (C) 2010 Stewart Smith
# All rights reserved.
#
# Use and distribution licensed under the BSD license.  See
# the COPYING.BSD file in this directory for full text.
#
# Parts also under GPL, see COPYING file in this directory for full text.

AC_INIT([pandora-build],[PANDORA_CANONICAL_VERSION],[http://launchpad.net/pandora-build])
AC_CONFIG_SRCDIR([m4/pandora_canonical.m4])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR([m4])
AC_PREFIX_DEFAULT([/usr])

AM_INIT_AUTOMAKE(-Wall -Werror foreign subdir-objects)

AC_CONFIG_FILES(Makefile)

AC_OUTPUT
